<resources>
    <string name="app_name">BHnote</string>
    <string name="title_activity_xin_hai_note_create">XinHaiNoteCreate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">下一个</string>
    <string name="previous">先前</string>

    <string name="hello_first_fragment">你好</string>
    <string name="hello_second_fragment">哈哈. Arg: %1$s</string>
    <!-- Preference Titles -->
    <string name="messages_header">消息</string>
    <string name="web_header">网络</string>

    <!-- Messages Preferences -->
    <string name="signature_title">你的名字</string>
    <string name="reply_title">默认应答动作</string>

    <!-- Sync Preferences -->
    <string name="sync_title">同步功能</string>
    <string name="xszw">隐藏中文</string>
    <string name="attachment_title">下载传入附件</string>
    <string name="attachment_summary_on">自动下载附件的传入电子邮件</string>
    <string name="attachment_summary_off">仅在手动请求时下载附件</string>

    <string name="string_change">更改位置</string>
    <string name="string_done">确定</string>
    <string name="string_start">开始</string>
    <string name="string_stop">结束</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>